version/0.6/_sources/examples/run_python_script/02_1_oscillator_robustness.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/run_python_script/02_1_oscillator_robustness.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_run_python_script_02_1_oscillator_robustness.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_run_python_script_02_1_oscillator_robustness.py:


.. _ref_oscillator_robustness:

Oscillator robustness
---------------------

This example demonstrates how to create and run a robustness flow for an oscillator.

It uses the ``oscillator_robustness_arsm.py`` file to create a robustness
flow for an oscillator. It then explains how you can optionally save
the project to a desired location.

.. GENERATED FROM PYTHON SOURCE LINES 37-40

Perform required imports
~~~~~~~~~~~~~~~~~~~~~~~~
Perform the required imports.

.. GENERATED FROM PYTHON SOURCE LINES 40-44

.. code-block:: Python


    from ansys.optislang.core import Optislang
    import ansys.optislang.core.examples as examples


.. GENERATED FROM PYTHON SOURCE LINES 45-48

Create optiSLang instance
~~~~~~~~~~~~~~~~~~~~~~~~~
Create the optiSLang instance.

.. GENERATED FROM PYTHON SOURCE LINES 48-52

.. code-block:: Python


    osl = Optislang(ini_timeout=60)
    print(osl)


.. GENERATED FROM PYTHON SOURCE LINES 53-57

Get path of example script and run it
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Get the path of the example script and then run this
script.

.. GENERATED FROM PYTHON SOURCE LINES 57-67

.. code-block:: Python


    paths = examples.get_files("oscillator_robustness_arsm")
    osl.application.project.run_python_file(paths[0])

    # Run workflow
    # ~~~~~~~~~~~~
    # Run the workflow created by the preceding script.

    osl.application.project.start()


.. GENERATED FROM PYTHON SOURCE LINES 68-78

Optionally save project
~~~~~~~~~~~~~~~~~~~~~~~
If you want to save the project to some desired
location, uncomment and edit these lines:

.. code:: python

  path = r'<insert-desired-location>'
  osl.save_as(os.path.join(path, "test_project.opf"))


.. GENERATED FROM PYTHON SOURCE LINES 80-83

Stop and cancel project
~~~~~~~~~~~~~~~~~~~~~~~
Stop and cancel the project.

.. GENERATED FROM PYTHON SOURCE LINES 83-86

.. code-block:: Python


    osl.dispose()


.. GENERATED FROM PYTHON SOURCE LINES 87-95

View generated workflow
~~~~~~~~~~~~~~~~~~~~~~~
This image shows the generated workflow.

.. image:: ../../_static/02_1_oscillator_robustness.png
 :width: 600
 :alt: Result of script.



.. _sphx_glr_download_examples_run_python_script_02_1_oscillator_robustness.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 02_1_oscillator_robustness.ipynb <02_1_oscillator_robustness.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 02_1_oscillator_robustness.py <02_1_oscillator_robustness.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
